# pulsar-rust

./: .gitignore  Cargo.toml  README.md
broker/: README.MD  Settings.dev.toml  Settings.integration.toml  Settings.toml  build.rs  cargo.toml
broker/assets/css/: compact.css  log-detail.css  log-summmary.css  main.css  relaxed.css
broker/docs/: sample_requests-macos.md  sample_requests-windows.md  sample_requests.md
broker/src/: admin_service.rs  api.rs  api_bin.rs  api_bin_sockets.rs  api_http_warp.rs  collections.rs  data.rs  formatting.rs  html_builder.rs  http_api_sockets.rs  http_api_warp.rs  lib.rs  main.rs  metrics.rs  model.rs  node_sync.rs  observability.rs  persistence.rs  pub_service.rs  services.rs  sub_service.rs  utils.rs
broker/src/api_bin/: connection.rs  connection_thread.rs  listener_thread.rs  processing_thread.rs  processing_thread_pool.rs  router_thread.rs  server.rs
broker/src/api_bin_sockets/: connection.rs  connection_thread.rs  listener_thread.rs  processing_thread.rs  processing_thread_pool.rs  router_thread.rs  server.rs  server_connection.rs  server_listener.rs  server_thread.rs
broker/src/api_http/: html.rs  logs.rs  publisher.rs  stats.rs  subscriber.rs
broker/src/api_http_warp/: admin.rs  assets.rs  docs.rs  html.rs  logs.rs  publisher.rs  pubsub.rs  stats.rs  subscriber.rs
broker/src/collections/: big_set.rs  dual_key_hash_map.rs
broker/src/data/: cluster.rs  data_access.rs  data_access_layer.rs  event_log.rs  ledger.rs  mod.rs  node.rs  partition.rs  state.rs  subscription.rs  topic.rs
broker/src/formatting/: html_builder.rs  plain_text_builder.rs
broker/src/http_api_warp/: admin.rs  docs.rs  pubsub.rs  responses.rs
broker/src/model/: cluster.rs  data_types.rs  database_entities.rs  events.rs  ledger.rs  messages.rs  mod.rs  node.rs  partition.rs  request_mapping.rs  response_mapping.rs  responses.rs  subscription.rs  (+1 more)
broker/tests/: data_layer.rs  persistence_layer.rs
client/: Cargo.toml  README.MD  log.json
client/src/: api_bin.rs  api_bin_sockets.rs  connection.rs  hyper_test_client.rs  lib.rs  main.rs  net_test_client.rs  socket_test_client.rs
client/src/api_bin/: async_client.rs  async_receiver_thread.rs  blocking_client.rs  client.rs  connection.rs  contracts.rs  future_response.rs
client/src/api_bin_sockets/: client.rs  connection.rs  connection_thread.rs
client/src/connection/: client.rs  client_connection.rs
integration_tests/: Cargo.toml
integration_tests/src/: main.rs
net/: Cargo.toml
net/src/: bin_serialization.rs  contracts.rs  data_types.rs  display.rs  error_codes.rs  http.rs  lib.rs  messages.rs  sockets.rs
perftest/: Cargo.toml  README.MD
perftest/src/: async_test_client.rs  main.rs  socket_test_client.rs  sync_test_client.rs
storage/: Cargo.toml
storage/src/: main.rs
(+33 files in other folders)
