[workspace]

members = [
    "broker",
    "client",
    "storage",
    "integration_tests",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Martin Halliday <https://github.com/bikeman868>"]

[workspace.dependencies]
serde = { version = "*", features = ["derive"] }
rmp-serde = { version = "*" }
config = { version = "*" }
chrono = { version = "*" }
tokio = { version = "*", features = ["full"] }
warp = { version = "*" }
