[workspace]

members = [
    "broker",
    "client",
    "net",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Martin Halliday <https://github.com/bikeman868>"]

[workspace.dependencies]
serde = { version = "*", features = ["derive"] }
rmp-serde = { version = "*" }
config = { version = "*" }
chrono = { version = "*" }
hyper = { version = "*" }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
warp = { version = "*" }
ctrlc = { version = "*" }
bytes = { version = "*" }
statsd = { version = "*" }
