[package]
name = "pulsar-rust-client"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
rmp-serde = { workspace = true }
hyper = { version = "1", features = ["http1", "client"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = { version = "1" }
